--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main class="nyx-center nyx-layer">
     <section class="nyx-stack nyx-gap-lg nyx-panel nyx-panel--flat">
       <h1 class="nyx-title">NOCTURNE PROTOCOL</h1>
-      <p class="nyx-desc">Orbiting relay above a silent world. Observe, listen, decide.</p>
+      <p class="nyx-desc">A sci-fi interactive visual novel of cosmic horror in the stars. Orbiting relay above a silent world. Observe, listen, decide.</p>
       <div class="nyx-stack">
         <button id="startBtn" class="nyx-btn nyx-btn-primary">START</button>
         <button id="muteBtn"  class="nyx-btn nyx-btn-ghost" aria-pressed="false">MUTE</button>
